--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "react-dom": "^16.13.0",
     "react-hookstore": "^1.4.3",
     "react-scripts": "^3.4.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
