--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,15 @@
   },
   "homepage": "/",
   "dependencies": {
+    "enzyme": "latest",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-hookstore": "^1.4.3",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-test-renderer": "^16.13.0"
   },
   "browserslist": {
     "production": [
