--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "enzyme": "latest",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.0",
     "react-hookstore": "^1.4.3",
+    "react-jsonschema-form": "^1.8.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
-    "react-test-renderer": "^16.13.0"
+    "react-test-renderer": "^16.13.0",
+    "superagent": "^5.2.2"
   },
   "browserslist": {
     "production": [
